# market-microstructure-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
agent/hermes/: __init__.py  daily_report.py  db.py  requirements.txt
agent/hermes/reports/: 2026-05-23.md  2026-05-24.md  2026-05-29.md
agent/hermes/tests/: test_daily_report.py
agent/mt5_bridge/: __init__.py  mt5_bridge.py  mt5_file_export.mq5  protocol.md  requirements.txt
agent/research/: .gitignore  README.md  features.py  quant.py  requirements.txt  research.ipynb  synthetic.py  train.py
agent/research/results/: model_results.json
config/: api_key.txt.example
dashboard/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/equity/: route.ts
dashboard/app/api/health/: route.ts
dashboard/app/api/model/: route.ts
dashboard/app/api/overview/: route.ts
dashboard/app/api/prices/: route.ts
dashboard/app/api/reports/: route.ts
dashboard/app/api/reports/[date]/: route.ts
dashboard/app/api/signals/: route.ts
dashboard/app/prediction/: page.tsx
dashboard/app/reports/: page.tsx
dashboard/components/: charts.tsx  ui.tsx
dashboard/lib/: analytics.ts  db.ts  model.ts  quant.ts  reports.ts  sample.ts  types.ts
docs/: MONDAY_CHECKLIST.md  MT5_BRIDGE.md  OPERATIONS.md  RECOVERY.md  RUNBOOK.md
include/evaluation/: metrics.hpp
include/indicators/: momentum.hpp  volatility.hpp
include/market_data/: file_provider.hpp  market_fetcher.hpp  mt5_provider.hpp  provider.hpp  twelvedata_provider.hpp
include/storage/: sqlite_logger.hpp
include/validation/: validation.hpp
ops/: .env.example  check_quotes.sh  common.sh  crontab.example  health_check.py  install_systemd.sh  log_health.sh  mme_cleanup.sh  probe_mt5_bridge.sh  restart_engine.sh  run_eod_pipeline.sh  run_health_probe.sh  run_session_end.sh  run_session_start.sh  start_engine.sh  status_engine.sh  stop_engine.sh  telegram_notify.sh
ops/systemd/: README.md  mme-alert.service  mme-cleanup.service  mme-cleanup.timer  mme-engine.service  mme-health.service  mme-health.timer
reports/snapshots/: backtest_2026-05-24.txt  health_2026-05-23.txt  health_2026-05-24.txt
src/: main.cpp
src/evaluation/: main.cpp  metrics.cpp
src/indicators/: momentum.cpp  volatility.cpp
src/market_data/: file_provider.cpp  market_fetcher.cpp  mt5_provider.cpp  twelvedata_provider.cpp
src/storage/: sqlite_logger.cpp
src/validation/: validation.cpp
tests/: unit_tests.cpp
